--- a/index.ipynb
+++ b/index.ipynb
@@ -216,11 +216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "titles = None"
+    "titles = list(map(lambda movie: movie['title'], scaled_movies))"
    ]
   },
   {
