--- a/index.ipynb
+++ b/index.ipynb
@@ -454,23 +454,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "435.0"
+       "180.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "regression_formula(100) # 180.0\n",
-    "regression_formula(250) # 435.0"
+    "#regression_formula(250) # 435.0"
    ]
   },
   {
