--- a/index.ipynb
+++ b/index.ipynb
@@ -759,7 +759,8 @@
    "outputs": [],
    "source": [
     "def error(x_values, y_values, m, b, x):\n",
-    "    y_actual_at_x = \n",
+    "    y_actual_at_x = y_actual(x, x_values, y_values)\n",
+    "    y_\n",
     "    pass"
    ]
   },
