--- a/index.ipynb
+++ b/index.ipynb
@@ -760,7 +760,7 @@
    "source": [
     "def error(x_values, y_values, m, b, x):\n",
     "    y_actual_at_x = y_actual(x, x_values, y_values)\n",
-    "    y_\n",
+    "    y_estima\n",
     "    pass"
    ]
   },
