--- a/index.ipynb
+++ b/index.ipynb
@@ -761,7 +761,7 @@
     "def error(x_values, y_values, m, b, x):\n",
     "    y_actual_at_x = y_actual(x, x_values, y_values)\n",
     "    y_estimated_at_x = regression_formula(x)\n",
-    "    pass"
+    "    return y_actual_at_x - "
    ]
   },
   {
