--- a/index.ipynb
+++ b/index.ipynb
@@ -754,21 +754,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def error(x_values, y_values, m, b, x):\n",
     "    y_actual_at_x = y_actual(x, x_values, y_values)\n",
     "    y_estimated_at_x = regression_formula(x)\n",
-    "    return y_actual_at_x - "
+    "    return y_actual_at_x - y_estimated_at_x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-6.099999999999994"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "error(x_values, y_values, 1.7, 10, 13) # -6.099999999999994"
    ]
