--- a/index.ipynb
+++ b/index.ipynb
@@ -825,7 +825,9 @@
    "outputs": [],
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
-    "    pass"
+    "    return dict(\n",
+    "        \n",
+    "    )"
    ]
   },
   {
