Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -826,7 +826,8 @@
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
     "    return dict(\n",
-    "        marker={}\n",
+    "        marker={'color': 'red'},\n",
+    "        mode= ''\n",
     "    )"
    ]
   },
