Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -828,7 +828,7 @@
     "    return dict(\n",
     "        marker= {'color': 'red'},\n",
     "        mode= 'lines',\n",
-    "        name= \n",
+    "        name= f\"error at \"\n",
     "    )"
    ]
   },
