--- a/index.ipynb
+++ b/index.ipynb
@@ -830,7 +830,7 @@
     "        mode= 'lines',\n",
     "        name= f\"error at {x}\",\n",
     "        'x': [x, x],\n",
-    "        'y': [y_actual(x, x_values, y_values), ]\n",
+    "        'y': [y_actual(x, x_values, y_values), regression_formula(x)]\n",
     "    )"
    ]
   },
