--- a/index.ipynb
+++ b/index.ipynb
@@ -820,18 +820,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-20-59c6f1f2c86e>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-59c6f1f2c86e>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    'x': [x, x],\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
     "    return dict(\n",
@@ -845,9 +836,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'marker': {'color': 'red'},\n",
+       " 'mode': 'lines',\n",
+       " 'name': 'error at 120',\n",
+       " 'x': [120, 120],\n",
+       " 'y': [93.0, 214.0]}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "error_at_120m = error_line_trace(x_values, y_values, 1.7, 10, 120)\n",
     "\n",
