--- a/index.ipynb
+++ b/index.ipynb
@@ -1140,7 +1140,7 @@
    "outputs": [],
    "source": [
     "def error_line_traces(x_values, y_values, m, b):\n",
-    "    return list(map(lambda x_))"
+    "    return list(map(lambda x_value :))"
    ]
   },
   {
