Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1135,17 +1135,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def error_line_traces(x_values, y_values, m, b):\n",
-    "    return list(map(lambda x_value : error_line_trace(x_values, y_values, m, b, ), x_values))"
+    "    return list(map(lambda x_value : error_line_trace(x_values, y_values, m, b, x_value), x_values))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1154,18 +1154,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "errors_for_regression and len(errors_for_regression) # 30"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'marker': {'color': 'red'},\n",
+       " 'mode': 'lines',\n",
+       " 'name': 'error at 200.0',\n",
+       " 'x': [200.0, 200.0],\n",
+       " 'y': [409.0, 350.0]}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "errors_for_regression and errors_for_regression[-1]\n",
     "\n",
