--- a/index.ipynb
+++ b/index.ipynb
@@ -1961,7 +1961,7 @@
    "outputs": [],
    "source": [
     "def squared_error(x_values, y_values, m, b, x):\n",
-    "    pass"
+    "    return "
    ]
   },
   {
