Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1961,7 +1961,7 @@
    "outputs": [],
    "source": [
     "def squared_error(x_values, y_values, m, b, x):\n",
-    "    return ()**2"
+    "    return (error(x_values, y_values, m, b, x))**2"
    ]
   },
   {
