--- a/index.ipynb
+++ b/index.ipynb
@@ -1998,7 +1998,7 @@
    "outputs": [],
    "source": [
     "def squared_errors(x_values, y_values, m, b):\n",
-    "    return list(map(lambda x_values))"
+    "    return list(map(lambda x_value : squared_error(x_values, y_values, m, b, x)))"
    ]
   },
   {
