--- a/index.ipynb
+++ b/index.ipynb
@@ -1993,12 +1993,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def squared_errors(x_values, y_values, m, b):\n",
-    "    return list(map(lambda x_value : squared_error(x_values, y_values, m, b, x)))"
+    "    return list(map(lambda x_value : squared_error(x_values, y_values, m, b, x_value), x_values))"
    ]
   },
   {
