--- a/index.ipynb
+++ b/index.ipynb
@@ -2066,7 +2066,7 @@
    "outputs": [],
    "source": [
     "def residual_sum_squares(x_values, y_values, m, b):\n",
-    "    pass"
+    "    return sum()"
    ]
   },
   {
