Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2109,7 +2109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2118,13 +2118,14 @@
        "19.07914160659343"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "root_mean_squared_error(x_values, y_values, 1.7, 10) # 19.07914160659343"
+    "root_mean_squared_error(x_values, y_values, 1.7, 10) # 19.07914160659343\n",
+    "root_mean_squared_error(x_values, y_values, 1.9, 20) # 19.07914160659343"
    ]
   },
   {
