--- a/index.ipynb
+++ b/index.ipynb
@@ -2109,16 +2109,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "19.07914160659343"
+       "327612.2800000001"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2126,7 +2126,7 @@
    "source": [
     "root_mean_squared_error(x_values, y_values, 1.7, 10) # 19.07914160659343\n",
     "root_mean_squared_error(x_values, y_values, 1.9, 20) # 19.07914160659343\n",
-    "residual_sum_squares(x_values, y_values, m, b)"
+    "residual_sum_squares(x_values, y_values, 1.7, 10)"
    ]
   },
   {
