--- a/index.ipynb
+++ b/index.ipynb
@@ -754,28 +754,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "def error(x_values, y_values, m, b, x):\n",
     "    y_actual_at_x = y_actual(x, x_values, y_values)\n",
-    "    y_estimated_at_x = regression_formula(x)\n",
+    "    y_estimated_at_x = m*x + b\n",
     "    return y_actual_at_x - y_estimated_at_x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-6.099999999999994"
+       "-18.700000000000003"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
